more usecase conversions

--- a/www/usemodels/usecases/usecase01.html
+++ b/www/usemodels/usecases/usecase01.html
@@ -30,17 +30,35 @@
                                             <li>UC-02 - 
                 <a href="./usecase02.html">Search for Issue by ID</a>
 </li>
+                                            <li>UC-03 - 
+                <a href="./usecase03.html">Quick search for Issues</a>
+</li>
+                                            <li>UC-04 - 
+                <a href="./usecase04.html">Advanced search for Issues</a>
+</li>
+                                            <li>UC-05 - 
+                <a href="./usecase05.html">Save Issue query</a>
+</li>
+                                            <li>UC-06 - 
+                <a href="./usecase06.html">Run Saved Issue query</a>
+</li>
+                                            <li>UC-07 - 
+                <a href="./usecase07.html">Step through related Issues</a>
+</li>
+                                            <li>UC-08 - 
+                <a href="./usecase08.html">Review resulting Issues long format</a>
+</li>
                 </ul></font>
                         </td>
                     <td width="80%" align="left" valign="top">
                                                                 <table border="0" cellspacing="1" bgcolor="#cccccc">
   <tr>
-    <td bgcolor="#ffffff" align="right" valign="top"><b>Name:</b></td>
-        <td bgcolor="#ffffff" valign="top">UC-01 - Entering an Issue</td>
+    <td bgcolor="white" align="right" valign="top"><b>Name:</b></td>
+        <td bgcolor="white" valign="top">UC-01 - Entering an Issue</td>
   </tr>
   <tr>
-    <td bgcolor="#ffffff" align="right" valign="top"><b>Extends:</b></td>
-    <td bgcolor="#ffffff" valign="top">None</td>
+    <td bgcolor="white" align="right" valign="top"><b>Extends:</b></td>
+    <td bgcolor="white" valign="top">None</td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Description:</b></td>
@@ -86,10 +104,14 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" align="right" valign="top"><b>Result:</b></td>
+    <td bgcolor="white" align="right" valign="top"><b>Results:</b></td>
     <td bgcolor="white" valign="top">
+    <ul>
+            <li>
 New issue is entered, or matching existing issue has vote increased.
-</td>
+</li>
+        </ul>
+    </td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>DataSets:</b></td>
@@ -180,7 +202,6 @@ New issue is entered, or matching existing issue has vote increased.
         <li>Scarab: display <a href="ProjectIssues.html">ProjectIssues</a> page 
                      with <a href="IssueChangedConfirmation.html">IssueChangedConfirmation</a> </li>
       </ol>
-
     </td>
   </tr>
 </table>
@@ -202,6 +223,7 @@ New issue is entered, or matching existing issue has vote increased.
         </body>
     </html>
 <!-- end the processing -->
+
 
 
 
