--- a/www/usemodels/usecases/usecase06.html
+++ b/www/usemodels/usecases/usecase06.html
@@ -10,7 +10,7 @@
     <html>
         <head>
             <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-            <title>Scarab - Search for Issue by ID</title>
+            <title>Scarab - Run Saved Issue query</title>
         </head>
 
         <body bgcolor="#ffffff" text="#000000" link="#525D76">        
@@ -54,17 +54,16 @@
                                                                 <table border="0" cellspacing="1" bgcolor="#cccccc">
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Name:</b></td>
-        <td bgcolor="white" valign="top">UC-02 - Search for Issue by ID</td>
+        <td bgcolor="white" valign="top">UC-06 - Run Saved Issue query</td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Extends:</b></td>
-    <td bgcolor="white" valign="top">None</td>
+    <td bgcolor="white" valign="top"><a href="usecase05.html">UC-05</a></td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Description:</b></td>
     <td bgcolor="white" valign="top">
-       User enters Issue ID and sees the details of the specified Issue
-       or an appropriate message.
+    User is given the ability to run a previously staved query.
 </td>
   </tr>
   <tr>
@@ -84,12 +83,9 @@
     <td bgcolor="white" align="right" valign="top"><b>Stakeholders:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>Project Participant : wants to be able to specify issue
-      unamgiously via an easy-to-type-or-say string.  This is often
-      done via email, in code comments, in chat, or verbally on phone
-      or in meetings.  Challenge is that unambiguous specification is
-      at odds with brevity.  Assumes project name or URL as shared
-      knowledge.
+            <li>Project Participant : Wants to be able to search for an
+    Issue with great detail (including all Attribute fields) and then be
+    able to save it for reuse at a later date.
     </li>
         </ul>
     </td>
@@ -101,7 +97,7 @@
             <li>Logged in</li>
             <li>Project set up</li>
             <li>Existing Issue</li>
-            <li>User knows Issue ID</li>
+            <li>Saved Query Exists</li>
         </ul>
     </td>
   </tr>
@@ -110,7 +106,7 @@
     <td bgcolor="white" valign="top">
     <ul>
             <li>
-Details of the Issue is displayed
+User clicks on saved query. Result page is the Issue view or the Issue list page.
 </li>
         </ul>
     </td>
@@ -119,7 +115,8 @@ Details of the Issue is displayed
     <td bgcolor="white" align="right" valign="top"><b>DataSets:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>Issue ID</li>
+            <li>Query Terms</li>
+            <li>Saved Query Name</li>
         </ul>
     </td>
   </tr>
@@ -127,20 +124,6 @@ Details of the Issue is displayed
     <td bgcolor="white" align="right" valign="top"><b>Q/A:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>If all Issues are in project context,               is there a quick way to jump to Issue in another project?
-            <ul>
-            <li><font color="green">
-        If possible a link to the other project should be provided.
-    </font></li>
-            </ul>
-        </li>
-            <li>How can this functionality be put on tigris StartPage?
-            <ul>
-            <li><font color="green">
-        As a small text entry box.
-    </font></li>
-            </ul>
-        </li>
         </ul>
     </td>
   </tr>
@@ -148,7 +131,8 @@ Details of the Issue is displayed
     <td bgcolor="white" align="right" valign="top"><b>Notes:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>If validation fails, Scarab displays an error</li>
+            <li>Need to consider the ability to modify saved searches. This
+    functionality should go into a search editor usecase.</li>
         </ul>
     </td>
   </tr>
@@ -157,11 +141,33 @@ Details of the Issue is displayed
     <td bgcolor="white" valign="top">
         
       <ol>
-        <li>User: visit ProjectIssues, or any Scarab page in project context.</li>
-        <li>User: Enter issue ID into small field and hit button</li>
-        <li>[validation] Scarab: validates issue number</li>
-        <li>[validation] Scarab: validates user role permissions</li>
-        <li>Scarab: display IssueView details</li>
+        <li>User: click saved search link</li>
+        <li>Scarab: display Search results</li>
+        <li>[validation] Scarab: validates search criteria</li>
+        <li>Scarab: searches for matching issues</li>
+        <li>Scarab: filters search based on users role permissions.</li>
+        <li>if results.size( ) == 0:
+             <ul type="a">
+               <li>Scarab: display message on ProjectIssues with field data as entered</li>
+               <li>User: Modify search criteria and repeat</li>
+             </ul>
+        </li>
+        <li>if results.size( ) == 1: 
+             <ul type="a">
+               <li>Scarab: display issue view page</li>
+               <li>User: enter name of search to save. Clicks save button</li>
+             </ul>
+        </li>
+        <li> if results.size( ) &gt; 1:
+             <ul type="a">
+               <li>Scarab: display issue list page</li>
+               <li>User: survey resulting list</li>
+               <li>User: select one of the presented issues</li>
+               <li>User: sort issues based on column heading</li>
+               <li>User: modify displayed column headings</li>
+               <li>User: enter name of search to save. Clicks save button</li>
+             </ul>
+        </li>
       </ol>
     </td>
   </tr>
