--- a/www/usemodels/usecases/usecase07.html
+++ b/www/usemodels/usecases/usecase07.html
@@ -10,7 +10,7 @@
     <html>
         <head>
             <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-            <title>Scarab - Search for Issue by ID</title>
+            <title>Scarab - Step through related Issues</title>
         </head>
 
         <body bgcolor="#ffffff" text="#000000" link="#525D76">        
@@ -54,17 +54,18 @@
                                                                 <table border="0" cellspacing="1" bgcolor="#cccccc">
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Name:</b></td>
-        <td bgcolor="white" valign="top">UC-02 - Search for Issue by ID</td>
+        <td bgcolor="white" valign="top">UC-07 - Step through related Issues</td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Extends:</b></td>
-    <td bgcolor="white" valign="top">None</td>
+    <td bgcolor="white" valign="top">View an Issue</td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Description:</b></td>
     <td bgcolor="white" valign="top">
-       User enters Issue ID and sees the details of the specified Issue
-       or an appropriate message.
+    On the View an Issue page, the user is able to quickly link to
+    other related issues. They can be related in a variety of ways 
+    that need to be discussed.
 </td>
   </tr>
   <tr>
@@ -84,12 +85,7 @@
     <td bgcolor="white" align="right" valign="top"><b>Stakeholders:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>Project Participant : wants to be able to specify issue
-      unamgiously via an easy-to-type-or-say string.  This is often
-      done via email, in code comments, in chat, or verbally on phone
-      or in meetings.  Challenge is that unambiguous specification is
-      at odds with brevity.  Assumes project name or URL as shared
-      knowledge.
+            <li>Project Participant : Wants to be able to quickly view related Issues.
     </li>
         </ul>
     </td>
@@ -101,7 +97,7 @@
             <li>Logged in</li>
             <li>Project set up</li>
             <li>Existing Issue</li>
-            <li>User knows Issue ID</li>
+            <li>View Issue</li>
         </ul>
     </td>
   </tr>
@@ -110,7 +106,7 @@
     <td bgcolor="white" valign="top">
     <ul>
             <li>
-Details of the Issue is displayed
+User views an Issue and is presented with next/prev buttons.
 </li>
         </ul>
     </td>
@@ -127,20 +123,6 @@ Details of the Issue is displayed
     <td bgcolor="white" align="right" valign="top"><b>Q/A:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>If all Issues are in project context,               is there a quick way to jump to Issue in another project?
-            <ul>
-            <li><font color="green">
-        If possible a link to the other project should be provided.
-    </font></li>
-            </ul>
-        </li>
-            <li>How can this functionality be put on tigris StartPage?
-            <ul>
-            <li><font color="green">
-        As a small text entry box.
-    </font></li>
-            </ul>
-        </li>
         </ul>
     </td>
   </tr>
@@ -148,7 +130,7 @@ Details of the Issue is displayed
     <td bgcolor="white" align="right" valign="top"><b>Notes:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>If validation fails, Scarab displays an error</li>
+            <li>None</li>
         </ul>
     </td>
   </tr>
@@ -157,11 +139,8 @@ Details of the Issue is displayed
     <td bgcolor="white" valign="top">
         
       <ol>
-        <li>User: visit ProjectIssues, or any Scarab page in project context.</li>
-        <li>User: Enter issue ID into small field and hit button</li>
-        <li>[validation] Scarab: validates issue number</li>
-        <li>[validation] Scarab: validates user role permissions</li>
-        <li>Scarab: display IssueView details</li>
+        <li>User: view existing Issue</li>
+        <li>Scarab: display existing Issue</li>
       </ol>
     </td>
   </tr>
