added note about deprecation
removed old files

--- a/www/usemodels/usecases.html
+++ b/www/usemodels/usecases.html
@@ -8,6 +8,23 @@
 <body bgcolor="#FFFFFF">
     <h1>Scarab Use Cases</h1>
 
+<p>
+NOTICE: The files that are linked here are being converted over to our new
+usecase generation tool which is based on an XML format and uses <a
+href="http://jakarta.apache.org/velocity/anakia.html">Anakia</a> to
+transform the XML files into HTML files. This means that some of the
+links below will not work. Instead, you should visit this <a
+href="usecases/usecase01.html">page</a> as your starting point.
+</p>
+
+<p>
+If you would like to help convert the usecases to the new format and/or
+help finish them, please send email to the dev@scarab.tigris.org mailing
+list and let us know what you are working on. The format of the XML file
+is pretty simple and there are instructions in the scarab/README.txt
+file that details how to build the documentation.
+</p>
+
 <ul>
   <li>Basic Data Entry: 
     <ul>
