added jan's branching of issues propsal. i asked him for more details on the discussion he had brought up on the list and he responded with this nice document. :-)
...we need to discuss this more...i haven't had a chance to fully digest
it yet though...it is on my stack of things to do...if you have changes or
modifications that you would like to see, they will be accepted in the
form of patches to this document. :-)

-jon
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.5 2001/04/13 22:16:14 jgallegos Exp $ -->
+<!-- $Id: project_docs.html,v 1.6 2001/05/10 20:41:35 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -29,6 +29,12 @@
                 <li><a href="bug_trackers.html">Information on bug tracking tools</a></li>
 <!--            <li><a href="images/scarab-logo.gif">Logo</a></li> -->
             </ul>
+
+            <p>Proposals:</p>
+            <ul>
+                <li><a href="BranchingOfIssues.html">Branching of Issues</a> (discuss on the dev mailing list please)</li>
+            </ul>
+
             <p>In the future, this is where you will find:</p>
             <ul>
                 <li>project design documents,</li> 
