--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.11 2001/03/09 04:52:04 jon Exp $ -->
+<!-- $Id: index.html,v 1.12 2001/05/19 03:47:33 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -41,6 +41,10 @@
             Scarab will not implement its own notification system or
             localization system, that should be a reusable component of
             the underlying framework.
+            </p>
+            
+            <p>
+            <strong>Scarab is licensed under a BSD/Apache style license.</strong>
             </p>
         </td>
     </tr>
