--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.4 2001/04/28 02:15:37 fedor Exp $ -->
+<!-- $Id: project_status.html,v 1.5 2001/05/19 16:01:41 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -15,7 +15,7 @@
     </tr>
 </table>
 <p>
-Last Updated: $Date: 2001/04/28 02:15:37 $
+Last Updated: $Date: 2001/05/19 16:01:41 $
 </p>
 
 <p>
@@ -55,8 +55,18 @@ reflection of the current project status.
 
 <p>
 We are always looking for volunteers to help with the development of
-Scarab. Below are some of the things on our TODO list which we feel that 
+Scarab. Below are some of the things on our TODO list which we feel that
 people may want to contribute to.
+</p>
+
+<p>
+If there is nothing on here that sparks your interest, but you still
+want to contribute, please send email to the mailing list with
+suggestions for things that you would like to work on as well as what
+your skill set is. We would like to think of this as your project as
+well. If you just start contributing things as you see fit, then chances
+are we will accept those contributions or tell you how to do things the
+way that we would like to see them done.
 </p>
 
 <ul>
