tons of rework, cleanup and documentation added
updated the project status in an effort to tide the comparisons against
the subversion project. listed out some milestones.

updated the tools/technology to be based on reality

cleaned up the homepage

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.12 2001/05/19 03:47:33 jon Exp $ -->
+<!-- $Id: index.html,v 1.13 2001/05/21 03:39:25 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -28,12 +28,13 @@
                 <li>Built using Java Servlet technology for speed, scalability, 
                     maintainability, and ease of installation.</li> 
                 <li>Compatible with Bugzilla and other widely used bug tracking 
-                    system via a bug report DTD.</li>
-                <li>Modular design that allows manageable modifications of 
+                    system via a database level migration tool.</li>
+                <li>Modular code design that allows manageable modifications of 
                     existing and new features over time.</li>
                 <li>Fully customizable through a set of administrative pages.</li>
+                <li>Can be integrated easily into larger systems.</li>
             </ul>
-            
+
             <p>
             Although the final product will have a strong feature set,
             many of these features will be based on support in an
@@ -54,86 +55,24 @@
     <tr> 
         <td width="100%" bgcolor="#cccc99">
             <b><font face="Arial, Helvetica, sans-serif" color="#000033">
-            Project Status</font></b></td>
-    </tr>
-    <tr> 
-        <td bgcolor="#f0f0f0"> 
-<!--            <p>User interface <a href="mockup/index.html">mockup</a> now
-               in its <a href="mockup/four/index.html">fourth</a>
-               reincarnation.</p> -->
-            <p>Database <a href="scarab-schema.html">schema</a> is
-               annotated and reviewed.</p>
-            <p>Most of the work has been concentrated on preparing the
-            infrastracture for Scarab development. That includes
-            improvment of development tools used.</p>
-            </td>
-    </tr>
-</table>
-<br/>
-<table border="0" cellpadding="2" width="98%" >
-    <tr> 
-        <td width="60%" bgcolor="#cccc99">
-        <b><font face="Arial, Helvetica, sans-serif" color="#000033">News</font></b></td>
-        <td width="1%"></td>
-        <td width="39%" bgcolor="#CCCC99"><strong><font color="#000033"
-           face="Arial, Helvetica, sans-serif"> Get Involved </font></strong></td>
-    </tr>
-    <tr> 
-        <td valign="top" bgcolor="#f0f0f0"> 
-            <p><font size="2">
-                3/8/01 - Jason Robbins added the start of the 
-                         <a href="/usemodels/">Use Models</a> section.
-                <br/>
-                2/09/01 - Ignacio has volunteered to take on the creation of the 
-                          Import/Export tool for Bugzilla (see the Tasks document)
-                          for details.
-                <br/>
-                2/07/01 - Updated the <a href="scarab-tasks.html">Tasks</a>
-                          document.
-                <br/>
-                12/18/00 - Scarab re-designed CVS tree is in place. It should be 
-                much easier to do development with Scarab now. We are using <a 
-                href="http://jakarta.apache.org/ant/">Ant 1.2</a> as the build 
-                platform and <a href="http://jakarta.apache.org/tomcat/">Tomcat 
-                4.0m5</a> as the container (however, any 2.0 and greater engine 
-                should work). We have also started the switch to Velocity.
-                <br/>
-                11/10/00 - Scarab is migrating to <a 
-                href="http://jakarta.apache.org/velocity/">Velocity</a>. 
-                <br/>
-                09/28/00 -<a href="scarab_sitemap.pdf"> Sitemap - 
-                pdf</a> (237kb) Requires Acrobat 4.0 <br/>
-                08/03/00 - <a href="scarab-tasks.html">Scarab Tasks Document</a> 
-                has been posted. Comments should be directed to the mailing list. 
-                <br/>
-                07/26/00 - <a href="scarab-design.html">Scarab Design Document</a> 
-                has been posted. Comments should be directed to the mailing list. 
-                <br/>
-                06/05/00 - revised UI <a href="/mockup/">mockup</a> <br/>
-                05/23/00 - <a href="summit_meeting.html">Summit Meeting</a> Date 
-                Announced <br/>
-                03/31/00 - Initial <a href="/scarab-schema.html">schema</a> 
-                added to CVS for comment reviews. Please see the <a href="project_status.html">Project 
-                Status</a> for more information. <br/>
-                03/24/00 - <a href="project_status.html">Project Status</a> documentation 
-                added <br/>
-                02/23/00 - Jon Stevens joins Scarab project <br/>
-                02/02/00 - Tigris demonstrated at LinuxWorld <br/>
-                01/30/00 - Scarab project launched </font></p>
+            Getting Involved</font></b>
         </td>
-        <td></td>
-        <td valign="top" bgcolor="#f0f0f0">
-            <font size="2">
+    </tr>
+    <tr> 
+        <td bgcolor="#f0f0f0">
+            <p>
+            The fastest way to get involved with the Scarab project is
+            to start reading the documents that we have available:
+            </p>
+            
             <ul>
-            	<li>Review <a href="scarab-schema.html">Database Schema</a></li>
-            	<li>Join development <a href="project_mail.html">Mailing List</a></li>
-            	<li>Learn about the
-            	    <a href="project_development_tools_and_technology.html">development 
-                    tools</a></li>
-            	<li>Check out the <a href="scarab-tasks.html">Tasks</a> list.</li>
-            </font>
+                <li><a href="project_status.html">Project Status</a></li>
+                <li><a href="project_members.html">Getting Involved</a></li>
+                <li><a href="project_docs.html">Documentation</a></li>
+            </ul>
         </td>
     </tr>
 </table>
+
 </body>
 </html>
