--- a/www/project_development_tools_and_technology.html
+++ b/www/project_development_tools_and_technology.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_development_tools_and_technology.html,v 1.1 2000/12/20 01:05:48 artem Exp $ -->
+<!-- $Id: project_development_tools_and_technology.html,v 1.2 2001/05/21 03:39:25 jon Exp $ -->
 <html>
 <head>
 <title>Scarab: Development Tools and Technologies</title>
@@ -12,26 +12,23 @@
             Tools and Technologies...</font></b></td>
     </tr>
 </table>
-<p>Here is a list of technologies that are currently slated to be used within the 
-    project: 
+<p>
+Here is a list of technologies that are currently slated to be used
+within the project:
+</p>
 <ul>
-    <li> <a href="http://java.apache.org/turbine/">Turbine</a> will be used as the 
+    <li><a href="http://jakarta.apache.org/turbine/">Turbine</a> will be used as the 
         underlying framework</li>
-    <li> <a href="http://java.apache.org/turbine/peers.html">Peer model</a> and 
-        <a href="http://java.apache.org/turbine/torque.html">Torque</a> within Turbine 
+    <li><a href="http://jakarta.apache.org/turbine/howto/peers-howto.html">Peer model</a> and 
+        <a href="http://jakarta.apache.org/turbine/howto/torque-howto.html">Torque</a> within Turbine 
         will provide the database abstraction</li>
-    <li> <a href="http://www.working-dogs.com/turbine/cvsweb/index.cgi/turbine/src/java/org/apache/turbine/services/localization/">Localization 
-        Service</a> within Turbine will be used so that the application can be used 
-        in any language</li>
-    <li> <a href="http://jakarta.apache.org/velocity/">Velocity</a> will be used 
-        as the abstraction between the user interface and the business logic. We 
-        intend to make the look and feel of this application easily customizable.</li>
-    <li> <a href="http://www.mysql.com">MySQL</a> will be the SQL backend.</li>
-    <li> <a href="http://www.embarcadero.com/">Embarcadero ERStudio</a> - SQL database 
-        design</li>
-    <li> <a href="http://java.apache.org/jserv/">Apache JServ</a> and <a href="http://jakarta.apache.org/">Tomcat</a> 
-        will be the target Java Servlet engines, but this application should run 
-        on any JSDK 2.0 and higher Java Servlet engine.</li>
+    <li><a href="http://jakarta.apache.org/velocity/">Velocity</a> will
+    be used as the abstraction between the user interface and the
+    business logic. The look and feel of this application easily
+    customizable.</li>
+    <li><a href="http://www.mysql.com">MySQL</a> will be the SQL backend.</li>
+    <li><a href="http://jakarta.apache.org/">Tomcat</a> 
+        will be the target Java Servlet engine.</li>
 </ul>
 <p></p>
 </body>
