--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.6 2001/05/10 20:41:35 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.7 2001/05/21 03:39:25 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -18,16 +18,15 @@
         <td width="100%" height="100" bgcolor="#F0F0F0"> 
             <p>Current project documents:</p>
             <ul>
+                <li><a href="project_status.html">Project Status</a></li>
                 <li><a href="scarab-design.html">Design document</a></li>
                 <li><a href="usemodels/index.html">Use Models: user classes, use cases, screen descriptions</a></li>
-	<li><a href="scarabfeaturematrix.html">Feature Matrix</a></li>
-<!--            <li><a href="mockup/">User interface mockups</a></li> -->
+                <li><a href="scarabfeaturematrix.html">Feature Matrix</a></li>
                 <li><a href="scarab-schema.html">Database schema image</a></li>
                 <li><a href="http://scarab.tigris.org/source/browse/scarab/src/sql/scarab-schema.xml">Database schema 
                     XML definition</a></li>
                 <li><a href="security_considerations.html">Security considerations</a></li>
-                <li><a href="bug_trackers.html">Information on bug tracking tools</a></li>
-<!--            <li><a href="images/scarab-logo.gif">Logo</a></li> -->
+                <li><a href="bug_trackers.html">Information on other Issue/Bug Tracking tools</a></li>
             </ul>
 
             <p>Proposals:</p>
@@ -41,6 +40,7 @@
                 <li>users manuals, and</li> 
                 <li>standard specifications.</li> 
             </ul>
+
             <p>To get involved, join the developer's mailing list by sending e-mail 
                 to <a href="mailto:dev-subscribe@scarab.tigris.org">dev-subscribe@scarab.tigris.org</a>.</p>
             <p> 
