--- a/www/project_members.html
+++ b/www/project_members.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_members.html,v 1.3 2001/02/19 23:00:39 jon Exp $ --> 
+<!-- $Id: project_members.html,v 1.4 2001/05/21 03:39:25 jon Exp $ --> 
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -11,39 +11,95 @@
 face="Arial, Helvetica, sans-serif"> Scarab Participants </font></strong></td>
     </tr>
 </table>
-<p>We are looking for developers who are interested in sharing their
-ideas and getting down to coding in the near future.</p>
-<p> To get involved, join the developer's mailing list by sending email
-to <a
-href="mailto:dev-subscribe@scarab.tigris.org">dev-subscribe@scarab.tigris.org</a>.
+
+<p>To get involved with the development of Scarab, please 
+join the developer's <a href="/servlets/ProjectMailingListList">mailing list</a>.
 </p>
-<p> The first thing you should do when you join the list is to post an introduction 
-    message that tells the group: </p>
+
+<p>
+    The first thing you should send when you join the list is to post an
+    introduction message that tells the group:
+</p>
+
 <ul>
-    <li>who you are, </li>
-    <li>your interest in bug tracking,</li>
-    <li>the role you would like to play in the project (e.g., do you want to just 
+    <li>Who you are</li>
+    <li>Your interest in Issue Tracking</li>
+    <li>The role you would like to play in the project (e.g., do you want to just 
         discuss ideas, write code, do UI design, or be an early users?), and</li>
-    <li>the rough level of effort you expect to put (e.g., mainly lurking, a few 
+    <li>The rough level of effort you expect to put (e.g., mainly lurking, a few 
         postings a week, a few evenings, several hours a week, this is part of my 
         full-time job).</li>
 </ul>
 
-<table border="0" cellpadding="2" width="98%" bgcolor="#FFFFFF" >
+<table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
     <tr> 
-        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial, Helvetica, sans-serif" color="#000033">Contributors</font></b></td>
+        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial,
+        Helvetica, sans-serif" color="#000033">Helping Out</font></b></td>
     </tr>
 </table>
-<p>The following people are currently working on this project:
+
+<h3>Introduction</h3>
+
+<p>
+We are always looking for volunteers to help with the development of
+Scarab. We realize that many of the technologies that we are using may
+be new to you. As a result, we are willing to help you get up to speed.
+This will take a bit of time and patience on your part because you may
+not be used to our style of doing things. This also means that in order
+to do development, we will need you to take iniative and jump in
+wherever you see things needing development or improvement. Do not be
+afraid to suggest things on the mailing list or ask specific questions.
+</p>
+
+<h3>Getting Started</h3>
+
+<p>
+The first place to start off with developing on Scarab is to download
+the <a href="/servlets/ProjectSource">CVS tree</a> and explore the
+documentation, build system and code that is there already. Build a
+"target" sandbox, startup Tomcat and explore the templates that are
+already there. Analyze the database design and look at the files in the
+src/sql directory (the default-data and sample-data) files are very
+helpful.
+</p>
+
+<h3>Finding something to do</h3>
+
+<p>
+If there is nothing that immediately sparks your interest, but you still
+want to contribute, please send email to the mailing list with
+suggestions for things that you would like to work on as well as what
+your skill set is. We would like to think of this as your project as
+well. If you just start contributing things as you see fit, then chances
+are we will accept those contributions or tell you how to do things the
+way that we would like to see them done.
+</p>
+
+<p>
+Please note: Once we have UI and IA further along, we will be able to
+hand people a set of screens and say: "make these work". If you need
+help making them work, then we are available to discuss things online on
+the mailing list. Do not be afraid to ask questions.
+</p>
+
+<p>
+<table border="0" cellpadding="2" width="98%" bgcolor="#FFFFFF" >
+    <tr> 
+        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial,
+        Helvetica, sans-serif"
+        color="#000033">Contributors</font></b></td>
+    </tr>
+</table>
+</p>
+
+<p>The following people are currently working on this project:</p>
 
 <ul>
 <li>Jon S. Stevens - Project Leader and Lead Engineer</li>
 <li>John McNally   - Engineer</li>
-<li>Jason Robbins  - Co-Project Leader and Lead IA</li>
-<li>James Gallegos - Internal Project Manager - CollabNet</li>
-<li>Cameron Barret - UI Design</li>
+<li>James Gallegos - CollabNet Product Manager</li>
+<li>Brian O'Kelley - IA/UI Design</li>
 <li>TBA - Template Engineers</li>
-<li>Ignacio J. Ortega - Buzilla DTD Import/Export</li>
 </ul>
 
 </body>
