--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.5 2001/05/19 16:01:41 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.6 2001/05/21 03:39:25 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -10,13 +10,76 @@
 
 <table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
     <tr> 
-        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial, Helvetica, sans-serif" color="#000033">Status 
-            of the Scarab Issue Tracking System (SITS)</font></b></td>
+        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial, Helvetica, sans-serif" color="#000033">
+        Project Status</font></b></td>
     </tr>
 </table>
-<p>
-Last Updated: $Date: 2001/05/19 16:01:41 $
+
+<p align="center">
+<font size="+3">Weekly Status</font>
 </p>
+
+<p align="center">
+Last Updated: $Date: 2001/05/21 03:39:25 $
+</p>
+
+<h3><i>Tentative</i> Roadmap</h3>
+
+<ul>
+<li>
+    <strong>Milestone 0</strong>: IA/UI started.
+</li>
+<li>
+    <strong>Milestone 1</strong>: Enter an Issue. Show an Issue.
+    Attribute Editor. Integration issues identified and abstracted.
+    Login. Registration.
+</li>
+<li>
+    <strong>Milestone 2</strong>: Query for an Issue (basic and
+    advanced). Query for an Issue by id. Save stored query.
+</li>
+<li>
+    <strong>Milestone 3</strong>: Edit an Issue. Assign people to an
+    Issue. Move/Copy Issue.
+</li>
+<li>
+    <strong>Milestone 4</strong>: Implement business logic for editing
+    an issue (ie: Lifecycle of a bug).</li>
+<li>
+    <strong>Milestone 5</strong>: Sending email on issue modifications.
+</li>
+<li>
+    <strong>Milestone 6</strong>: Create a report (show and save a
+    report).
+</li>
+<li>
+    <strong>Milestone 7</strong>: Email saved reports.
+</li>
+<li>
+    <strong>Milestone 8</strong>: Attach a file to an Issue.
+</li>
+<li>
+    <strong>Milestone 9</strong>: Import Bugzilla database.
+</li>
+<li>
+    <strong>Milestone X</strong>: Secure system.
+</li>
+</ul>
+
+<h3>Progress</h3>
+
+<ul>
+    <li>IA/UI has been started.</li>
+    <li><a href="integration.html">Integration issues</a> have been
+    started and nearly completed.</li>
+    <li>Login/Registration has been implemented.</li>
+    <li>Enter an issue has been started.</li>
+    <li>Show an issue has been started.</li>
+    <li>Query for an existing issue has been started.</li>
+    <li>Attribute editor has been started.</li>
+</ul>
+
+<h3>Details</h3>
 
 <p>
 The Scarab project is currently under development. It has been under
@@ -25,19 +88,10 @@ development for quite some time now, however the development hasn't been
 that we are using to develop Scarab. The reason is that we have wanted
 to solve some of the MVC design issues before trying to create the
 application. This development has gone on in the Turbine and Velocity
-projects on <a href="http://Jakarta.apache.org/">Jakarta.apache.org</a>
+projects on <a href="http://jakarta.apache.org/">jakarta.apache.org</a>
 </p>
 
-<p>
-Development work on Scarab that can be considered nearly complete is the
-overall design of the database as well as the sandbox that has been
-created to allow people to easily check Scarab out of CVS, build it and
-run the included Tomcat servlet engine. We have also completed the
-login/registration screens as well as started work on the attribute
-editor and the first few issue related screens (entering a bug and
-viewing a bug). Part of this development work is the validation of the
-underlying framework code that we have developed.
-</p>
+<h3>Recent Activities</h3>
 
 <p>
 We are now in the process of focusing our attention IA/UI issues as well
@@ -47,31 +101,48 @@ it is best to consider the mailing list archives the most up to date
 reflection of the current project status.
 </p>
 
-<table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
-    <tr> 
-        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial, Helvetica, sans-serif" color="#000033">TODO...</font></b></td>
-    </tr>
-</table>
+<h3>What People Are Currently Working On</h3>
 
 <p>
-We are always looking for volunteers to help with the development of
-Scarab. Below are some of the things on our TODO list which we feel that
-people may want to contribute to.
-</p>
-
-<p>
-If there is nothing on here that sparks your interest, but you still
-want to contribute, please send email to the mailing list with
-suggestions for things that you would like to work on as well as what
-your skill set is. We would like to think of this as your project as
-well. If you just start contributing things as you see fit, then chances
-are we will accept those contributions or tell you how to do things the
-way that we would like to see them done.
+Please see the <a href="project_members.html">participants page</a> for
+a list of what each persons roles and responsibilities are.
 </p>
 
 <ul>
-    <li>Create a Bugzilla -> Scarab database migration tool (volunteers
-    needed!).</li>
+    <li><strong>Code</strong>: John McNally, Jon S. Stevens</li>
+    <li><strong>UI/IA</strong>: Brian O'Kelley, Jon S. Stevens</li>
+    <li><strong>Templates</strong>: John McNally, Jon S. Stevens, Elicia
+    David</li>
+    <li><strong>Docs</strong>: Jon S. Stevens</li>
 </ul>
+
+<h3>IA/UI Schedule</h3>
+
+<table border="1" cellspacing="1" cellpadding="3">
+<tr>
+<td><strong>Duration</strong></td>
+<td><strong>Tasks</strong></td>
+<td><strong>Status</strong></td>
+</tr>
+<tr>
+<td>May 7-11</td><td>1st draft (Work flows 2.0.0, 2.1.0, 2.2.0, 2.5.0, 2.6.0)</td><td>completed</td>
+</tr>    
+<tr>
+<td>May 14-18</td><td>1st draft (Work flows 2.3.0, 2.0.0.1, 3.0.0.a, 3.1.0.a, 3.2.0.a, 3.3.0.a, 3.4.0.a, 3.5.0.a, 3.6.0.a)</td><td>ongoing</td>
+</tr>    
+<tr>
+<td>May 16</td><td>Work flow review (Jon, Brian)</td><td>ongoing</td>
+</tr>    
+<tr>
+<td>May 18</td><td>Work flow review (Brian, James)</td><td>ongoing</td>
+</tr>    
+<tr>
+<td>May 21</td><td>Page requirements</td><td>&nbsp;</td>
+</tr>    
+<tr>
+<td>May 21-25</td><td>Work flow revisions</td><td>&nbsp;</td>
+</tr>    
+</table>
+
 </body>
 </html>
