the links in the index page could be relative to /servlets instead of to / Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.13 2001/05/21 03:39:25 jon Exp $ -->
+<!-- $Id: index.html,v 1.14 2001/05/21 03:43:19 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -66,9 +66,9 @@
             </p>
             
             <ul>
-                <li><a href="project_status.html">Project Status</a></li>
-                <li><a href="project_members.html">Getting Involved</a></li>
-                <li><a href="project_docs.html">Documentation</a></li>
+                <li><a href="/project_status.html">Project Status</a></li>
+                <li><a href="/project_members.html">Getting Involved</a></li>
+                <li><a href="/project_docs.html">Documentation</a></li>
             </ul>
         </td>
     </tr>
